--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body{
      border: 1px solid rgba(255,255,255,0.1);
 }
 
+#weather-info{
+     user-select: none;
+}
+
 .search-box{
      width: 100%;
      height: 80px;
