--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ body{
 
 #weather-info{
      user-select: none;
+     font-size: 19px;
+     font-weight: 700;
+     letter-spacing: 0.3px;
+}
+
+#des{
+     text-transform: capitalize;
+     user-select: none;
 }
 
 .search-box{
