--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
      margin: 0;
      padding: 0;
      box-sizing: border-box;
-     font-family: 'Figtree',sans-serif;
+     font-family: myfont;
      font-weight: 400;
+}
+
+@font-face {
+     font-family: myfont;
+     src: url(./Fonts/Font.woff2);
 }
 
 body{
