--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body{
      align-items: center;
      justify-content: center;
      flex-direction: column;
-     padding: 15px;
+     padding: 30px 15px;
      gap: 10px;
      border-radius: 20px;
      border: 1px solid rgba(255,255,255,0.1);
@@ -48,7 +48,7 @@ body{
 
 .search-box{
      width: 100%;
-     height: 80px;
+     height: auto;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -113,7 +113,7 @@ button svg{
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     gap: 20px;
+     gap: 10px;
 }
 
 .weather-image img{
